@@ -37,10 +37,11 @@
 
 #include <mysql.h>
 
-#include <wzd_backend.h>
 #include <libwzd-auth/wzd_md5.h>
 #include <libwzd-auth/wzd_md5crypt.h>
-#include <wzd_debug.h>
+
+#include <libwzd-core/wzd_backend.h>
+#include <libwzd-core/wzd_debug.h>
 
 #include "libmysql.h"
 
