@@ -287,6 +287,7 @@ AC_CONFIG_FILES([Makefile
 		 libwzd/Makefile
 		 libwzd-auth/Makefile
 		 libwzd-base/Makefile
+		 libwzd-core/Makefile
 		 libwzd-perl/Makefile
 		 libwzd-perl/ext/Makefile.PL
 		 m4/Makefile
@@ -296,14 +297,14 @@ AC_CONFIG_FILES([Makefile
                  modules/sfv/Makefile
                  modules/tcl/Makefile
                  modules/test/Makefile
-                 src/Makefile
-                 src/wzd.cfg.sample
                  tests/Makefile
                  tools/Makefile
                  tools/siteconfig/Makefile
                  tools/siteuptime/Makefile
                  tools/sitewho/Makefile
-		 wzd-config])
+		 wzd-config
+		 wzdftpd/Makefile
+                 wzdftpd/wzd.cfg.sample])
 
 AC_CONFIG_COMMANDS([default], [
 	chmod +x wzd-config
