@@ -1,13 +1,3 @@
 
 EXTRA_DIST = libwzd_test.c Makefile.test
 
-##libexecdir = ${pkgdatadir}/modules
-#libdir = ${pkgdatadir}/modules
-#
-#INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
-#
-##libexec_LTLIBRARIES = libwzd_test.la
-#lib_LTLIBRARIES = libwzd_test.la
-#
-#libwzd_test_la_SOURCES = libwzd_test.c
-#libwzd_test_la_LDFLAGS = -no-undefined -avoid-version -module -L../../src/ -L../../src/.libs/ -lwzd_core 
