@@ -1,7 +1,7 @@
 #include <string.h> /* memset */
 
-#include <wzd_structs.h>
-#include <wzd_section.h>
+#include <libwzd-core/wzd_structs.h>
+#include <libwzd-core/wzd_section.h>
 
 #define C1 0x12345678
 #define C2 0x9abcdef0
